<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/backgroundColor">

    <ImageView
        android:id="@+id/img_poster_tvshow"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/background_rounded"
        android:contentDescription="@string/movies_tittle"
        app:srcCompat="@drawable/poster_bohemian"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_judul_tvshow"
        style="@style/text_view_custom"
        android:layout_width="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/movies_tittle"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.3"
        app:layout_constraintStart_toEndOf="@+id/img_poster_tvshow"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_episode_tvshow"
        style="@style/text_view_custom"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/duration"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tv_judul_tvshow"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_judul_tvshow"
        app:layout_constraintTop_toBottomOf="@+id/tv_judul_tvshow" />

    <TextView
        android:id="@+id/tv_genre_tvshow"
        style="@style/text_view_custom"
        android:layout_width="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/genre_dummy"
        android:textColor="@android:color/darker_gray"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tv_episode_tvshow"
        app:layout_constraintTop_toBottomOf="@+id/tv_episode_tvshow" />

    <ImageView
        android:id="@+id/imageViewtvshow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="8dp"
        app:srcCompat="@drawable/ic_star"
        android:contentDescription="@string/rating_dummy"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tv_genre_tvshow"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_genre_tvshow"
        app:layout_constraintTop_toBottomOf="@+id/tv_genre_tvshow"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_rating_tvshow"
        style="@style/text_view_custom"
        android:layout_marginStart="12dp"
        android:layout_marginTop="3dp"
        android:text="@string/rating_dummy"
        android:textSize="25sp"
        android:textStyle="bold"
        android:fontFamily="@font/arial_rounded"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewtvshow"
        app:layout_constraintStart_toEndOf="@+id/imageViewtvshow"
        app:layout_constraintTop_toTopOf="@+id/imageViewtvshow" />

    <TextView
        style="@style/text_view_custom"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="8dp"
        android:text="@string/out_of_ten"
        android:textSize="15sp"
        android:textStyle="bold"
        android:fontFamily="@font/arial_rounded"
        app:layout_constraintBottom_toBottomOf="@+id/tv_rating_tvshow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tv_rating_tvshow"
        app:layout_constraintTop_toTopOf="@+id/tv_rating_tvshow"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>