<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor"
    android:orientation="vertical"
    tools:context="com.example.mycateloguemovie.activity.DetailActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/detail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_detail_poster"
                    android:contentDescription="@string/movies"
                    android:layout_width="0dp"
                    android:layout_height="550dp"
                    android:adjustViewBounds="true"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/poster_bohemian" />

                <TextView
                    android:id="@+id/tv_detail_judul"
                    style="@style/text_view_custom"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="#4D000000"
                    android:padding="8dp"
                    android:text="@string/movies_tittle"
                    android:textSize="25sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_detail_poster"
                    app:layout_constraintEnd_toEndOf="@+id/img_detail_poster"
                    app:layout_constraintHorizontal_bias="0.065"
                    app:layout_constraintStart_toStartOf="@+id/img_detail_poster"
                    app:layout_constraintTop_toTopOf="@+id/img_detail_poster"
                    app:layout_constraintVertical_bias="0.889" />

                <TextView
                    android:id="@+id/tv_detail_genre"
                    style="@style/text_view_custom"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp"
                    android:background="#4D000000"
                    android:padding="5dp"
                    android:text="@string/genre_dummy"
                    android:textColor="@android:color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/img_detail_poster"
                    app:layout_constraintEnd_toEndOf="@+id/tv_detail_judul"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="@+id/tv_detail_judul"
                    app:layout_constraintTop_toBottomOf="@+id/tv_detail_judul" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="550dp" />

                <include
                    android:id="@+id/include2"
                    layout="@layout/layout_detail_rating_section"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline2" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="668dp" />

                <TextView
                    android:id="@+id/tv_directordummy"
                    style="@style/text_view_custom"
                    android:layout_width="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/original_language"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/guideline3" />

                <TextView
                    android:id="@+id/tv_detail_director"
                    style="@style/text_view_custom"
                    android:layout_width="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/director_dummy"
                    android:textColor="@android:color/darker_gray"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_directordummy" />

                <TextView
                    android:id="@+id/Overview"
                    style="@style/text_view_custom"
                    android:layout_width="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/overview"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_director" />

                <TextView
                    android:id="@+id/tv_detail_synopsis"
                    style="@style/text_view_custom"
                    android:layout_width="0dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/lorem_ipsum"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/Overview" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                android:id="@+id/detail_progress_bar"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center_horizontal|center_vertical"
                android:foregroundGravity="top|center_horizontal" />
        </FrameLayout>
    </ScrollView>

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_detail"
        style="@style/AppTheme.TransparentTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        app:titleTextColor="@color/colorAccent"
        android:background="@android:color/transparent"
        />

</FrameLayout>